# sdk-cpp

./: .clang-format  .clangd  .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  STATUS.md
cmake/: usercanal-config.cmake.in
examples/: CMakeLists.txt  basic_foundation.cpp  event_advanced  event_advanced.cpp  event_revenue.cpp  event_simple.cpp  log_severities.cpp  log_simple.cpp
include/usercanal/: batch.hpp  client.hpp  config.hpp  enhanced_client.hpp  errors.hpp  hooks.hpp  network.hpp  observability.hpp  pipeline.hpp  session.hpp  types.hpp  usercanal.hpp  utils.hpp
src/: batch.cpp  client.cpp  config.cpp  enhanced_client.cpp  errors.cpp  hooks.cpp  network.cpp  observability.cpp  pipeline.cpp  session.cpp  types.cpp  utils.cpp
tests/: CMakeLists.txt  test_foundation.cpp  test_phase2.cpp  test_phase2_networking.cpp  test_phase3_advanced.cpp  test_phase3_basic.cpp  test_phase4_server_optimized.cpp  test_phase5_session_lifecycle.cpp  test_simple_client.cpp
